templates/service/deployment/service.template.yml
---
kind: Service
apiVersion: v1
metadata:
  name: blueprint
spec:
  ports:
    - name: server
      port: 80
      targetPort: 666
      protocol: TCP
    - name: gateway
      port: 8080
      targetPort: 667
      protocol: TCP
  selector:
    app: blueprint
