templates/service/deployment/ingress.template.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blueprint
spec:
  tls:
  - hosts:
    - ${TPL_INGRESS_HOST}
    - inbox-${TPL_INGRESS_HOST}
    secretName: ${TPL_INGRESS_HOST}
  rules:
    - host: ${TPL_INGRESS_HOST}
      http:
        paths:
        - path: /api/v3/blueprint
          backend:
            serviceName: blueprint
            servicePort: 8080
